--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 {% block title %}Flasky{% endblock %}
 
 {% block navbar %}
-<div class="navbar navbar-inverse" role="navigation">
+<div class="navbar navbar-light bg-primary" style="background-color: #e3f2fd;" role="navigation">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle"
