--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,8 @@
 {% extends "bootstrap/base.html" %}
+{% block scripts %}
+{{ super() }}
+{{ moment.include_moment() }}
+{% endblock %}
 
 {% block title %}Flasky{% endblock %}
 
