--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,14 @@
 {% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 
 {% block title%}Flasky{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-  <h1>Hello, Stranger!</h1>
+  <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
 </div>
+{{ wtf.quick_form(form) }}
+
+<p>The date and time is {{ moment(current_time).format("LLL") }} </p>
+<p>That was {{ moment(current_time).fromNow(refresh=True) }}</p>
 {% endblock %}
